# kotoba

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DM.md  LICENSE  README.md  VISION.md
assets/: dashboard.html  index.html
docs/: host-project-guide.md
examples/host-skeleton/: Cargo.toml  README.md
examples/host-skeleton/src/: domain.rs  host_caps.rs  main.rs
src/: changeset.rs  compaction.rs  config.rs  conversation.rs  doctor.rs  domain.rs  error_hints.rs  exit_codes.rs  host.rs  host_caps.rs  host_main.rs  identity.rs  init.rs  lib.rs  llm.rs  logging.rs  main.rs  panic_hook.rs  routing.rs  spawn.rs  sync.rs  system_prompt.rs  telemetry.rs  tokens.rs  util.rs  warnings.rs
src/agents/: mod.rs
src/api/: mod.rs  replay.rs
src/bench/: compare.rs  mod.rs  runner.rs  tasks.rs
src/daemon/: client.rs  commands.rs  mod.rs  persistence.rs  protocol.rs  scheduler.rs  server.rs  session_manager.rs  watchdog.rs
src/document/: mod.rs
src/eval/: baseline.rs  mod.rs  runner.rs
src/format/: mod.rs
src/git/: changelog.rs  commit.rs  mod.rs  pr.rs  review.rs
src/gpu/: mod.rs
src/index/: chunker.rs  command.rs  mod.rs  storage.rs
src/mcp/: client.rs  config.rs  manage.rs  mod.rs  (+2 more)
tests/: api_sse_mock.rs  api_sse_mock_channel.rs  api_sse_session_mock.rs  chain_incubation_loop.rs  compaction_stress.rs  daemon_host_invoke_protocol.rs  daemon_identity_routing.rs  doctor_host_capabilities.rs  host_capabilities.rs  host_caps.rs  host_chain_orchestration_routing.rs  host_compaction_indexed.rs  host_daemon_protocol_closed.rs  host_invoke_dispatch.rs  host_layer_wiki_indexing.rs  host_log_persona_session_indexed.rs  host_log_struggle_indexed.rs  host_log_vocab_indexed.rs  host_mcp_project_scope.rs  host_mcp_server_launch.rs  host_mode_e2e.rs  host_paradigm_v04_e2e.rs  host_planner_llm.rs  host_recorder_daemon_e2e.rs  host_recorder_llm.rs  host_session_storage.rs  host_skeleton.rs  host_subagent_kotoba_caps.rs  host_subagent_runtime_spawn.rs  init_smoke.rs  kotoba_session_e2e.rs  learning_loop.rs  mcp_scope.rs  orchestrate_host_routing.rs  orchestrate_kernel_routing.rs  persona_wiki_recall.rs  piped_mode.rs  spawn_smoke.rs  sync_smoke.rs  tier3_host_project.rs  (+2 more)
(+99 files in other folders)
